--- a/style.css
+++ b/style.css
@@ -8,18 +8,17 @@
 }
 
 body {
-    height: 100vh;
     font-size: 20px;
     background-color: whitesmoke;
 }
 
 .container {
-    margin: 5% 25%;
+    margin: 5% 25% 0%;
     /* background-color: rgb(255, 154, 2); */
     text-align: center;
     padding: 2% 5%;
     border-radius: 6px;
-    box-shadow: 0 0 20px rgb(0,0,0,0.15);;
+    box-shadow: 0 0 20px rgb(0,0,0,0.15);
 }
 
 h1, .card-container, .results{
@@ -63,4 +62,13 @@ img {
     height: 2rem;
     padding: 6px 12px;
     font-size: .8em;
+    border-radius: 6px;
+    border: none;
+    background-color: rgb(18, 166, 4);
+    color: white;
+}
+
+.btn-container button:hover {
+    background-color: rgb(94, 188, 85);
+
 }
