--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+:root {
+    --accent-color:  rgb(18, 166, 4);
+    --hover-accent-color:  rgb(94, 188, 85);
+    --shadow: 0 0 20px rgb(0,0,0,0.15);
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -18,7 +24,7 @@ body {
     text-align: center;
     padding: 2% 5%;
     border-radius: 6px;
-    box-shadow: 0 0 20px rgb(0,0,0,0.15);
+    box-shadow: var(--shadow);
 }
 
 h1, .card-container, .results{
@@ -37,12 +43,21 @@ h1, .card-container, .results{
     margin: .5rem 0;
     overflow: hidden;
     border-radius: 6px;
+    background-color: var(--accent-color);
+    border: none;
+    box-shadow: var(--shadow);
 }
 
+.card:hover {
+    background-color: var(--hover-accent-color);
+}
 
 img {
     object-fit: contain;
+    display: none;
 }
+
+
 
 
 .controls-container {
@@ -64,11 +79,11 @@ img {
     font-size: .8em;
     border-radius: 6px;
     border: none;
-    background-color: rgb(18, 166, 4);
+    background-color:var(--accent-color);
     color: white;
 }
 
 .btn-container button:hover {
-    background-color: rgb(94, 188, 85);
+    background-color:var(--hover-accent-color);
 
 }
